@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '0.1-SNAPSHOT'
+    ext.kotlin_version = '1.3.30'
     repositories {
         mavenCentral()
         maven {
@@ -43,7 +43,7 @@ sourceSets {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    compile "org.jetbrains.spek:spek:0.1-SNAPSHOT"
+    compile "org.jetbrains.spek:spek:1.1.5"
 
 }
 
@@ -59,19 +59,4 @@ test {
 
     reports.junitXml.enabled = false
     reports.html.enabled = false
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '1.11'
-
-    doLast() {
-        def gradleOpts = "-XX:MaxPermSize=300m -Xmx1024m"
-        def gradlew_sh = file("gradlew")
-        def gradlew_bat = file("gradlew.bat")
-        gradlew_sh.text = gradlew_sh.text.replace("DEFAULT_JVM_OPTS=",
-                "GRADLE_OPTS=\"$gradleOpts \$GRADLE_OPTS\"\nDEFAULT_JVM_OPTS=")
-        gradlew_bat.text = gradlew_bat.text.replace("set DEFAULT_JVM_OPTS=",
-                "set GRADLE_OPTS=$gradleOpts %GRADLE_OPTS%\nset DEFAULT_JVM_OPTS=")
-
-    }
 }
